--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,26 +27,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   bottom_navy_bar: ^6.0.0
-  intl: ^0.17.0
-  cupertino_radio_choice: ^1.0.2
   cloud_firestore: ^3.1.11
+  cupertino_icons: ^1.0.2
+  cupertino_radio_choice: ^1.0.2
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
   firebase_storage: ^10.2.10
+  flutter:
+    sdk: flutter
   get: ^4.6.1
   image_picker: ^0.8.4+11
+  intl: ^0.17.0
+  uuid: ^3.0.6
+  razorpay_flutter: ^1.3.0
+  # add this line to your dependencies
+  otp_text_field: ^1.1.2
+  intl_phone_field: ^3.1.0
+  flutter_rating_bar: ^4.0.0
+  syncfusion_flutter_datepicker: ^20.1.50
+  firebase_messaging: ^11.2.14
+  flutter_local_notifications: ^9.4.1
+  
+  
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -54,10 +59,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -77,13 +83,10 @@ flutter:
     - assets/razorpay.png
     - assets/doctor_home.png
     - assets/lukman.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
